tests/macros/plugin/validate_async.stderr
error: option `validate_async` does not exist for kind `plugin`
 --> $DIR/validate_async.rs:2:52
  |
2 |     let q = inquisition::questions![plugin { async validate: todo!() }];
  |                                                    ^^^^^^^^
