tests/macros/plugin/validate_async.rs
fn main() {
    let q = inquisition::questions![plugin { async validate: todo!() }];
}
